add trading-view company details service in live-update-service.